Added Tags, navbar, home page, UI fixes, route edits, template clean up

--- a/templates/posts/addpost.html
+++ b/templates/posts/addpost.html
@@ -3,25 +3,31 @@
 {% block title %} Add Post for {{user.full_name}}{% endblock %}
 
 {% block content %}
-
-<div class="container">
     <form action="/users/{{user.id}}/posts/new" method="POST" autocomplete="off">
         <h1 class="mb-4">Add Post for {{user.full_name}}</h1>
         <div class="mb-3">
             <label class="form-label" for="post_title">Title </label>
-            <input class="form-control" type="text" name="post_title" id="post_title" >
+            <input class="form-control" type="text" name="post_title" id="post_title" required>
         </div>
 
         <div class="mb-3">
             <label for="post_content" class="form-label">Content </label>
-            <textarea class="form-control" rows="3" name="post_content" id="post_content"></textarea>
+            <textarea class="form-control" rows="3" name="post_content" id="post_content" required></textarea>
+        </div>
+        
+        <div class="mb-3">
+            <span for="tags" class="mb-2"><b>Select tags which apply to this post: </b></span><br>
+
+            {% for tag in tags %}
+            <input class="form-input" type="checkbox" name="tags" value="{{tag.id}}"> {{tag.name}}<br>
+            {% endfor %}
         </div>
 
+    
         <div>
-            <button class="btn btn-success">Add</button>
-            <a href="/users/{{user.id}}" class="btn btn-outline-primary" role="button">Cancel</a>
+            <a href="/users/{{user.id}}" class="btn btn-outline-primary btn-sm" role="button">Cancel</a>
+            <button class="btn btn-success btn-sm">Add</button>
         </div>
     </form>
-</div>
 {% endblock %}
 
