--- a/templates/users/list.html
+++ b/templates/users/list.html
@@ -15,6 +15,6 @@
 	{% endfor %}
 </ul>
 
-<a class="btn btn-primary" href="/users/new" role="button">Add User</a>
+<a class="btn btn-primary btn-sm" href="/users/new" role="button">Add User</a>
 
 {% endblock %}
