--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,28 @@
 		/>
 		<title>{% block title %} Title {% endblock %}</title>
 	</head>
-	<body class="m-5">
+
+	<body>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="/posts">Blogly</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+					aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+					<div class="navbar-nav">
+						<a class="nav-link" href="/users">Users</a>
+						<a class="nav-link" href="/posts">Posts</a>
+						<a class="nav-link" href="/tags">Tags</a>
+					</div>
+					<div><a class="btn btn-outline-info" href="/users/new">Add User</a></div>
+				</div>
+			</div>
+		</nav>
+
+		<div class="container mt-4">
 		{% block content %} Content {% endblock %}
+		</div>
 	</body>
 </html>
