--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -8,15 +8,23 @@
 
 <p>{{post.content}}</p>
 
-<p><i>By <b>{{post.user.full_name}}</b></i></p>
+<p><i>By <b>{{post.user.full_name}} on {{post.created_at.strftime("%a %b %-d %Y, %-I:%M %p")}}</b></i></p>
 
-<div>
-    
+{% if tags %}
+<p><b>Tags:</b> 
 
+{% for tag in tags %}
+<span><a href="/tags/{{tag.id}}" class="badge bg-info text-light" role="button" style="text-decoration:none">{{tag.name}}</a></span>
+{% endfor %}
+
+</p>
+{% endif %}
+
+<div class="mt-4">
     <form action="/posts/{{post.id}}/delete" method="POST" >
-        <a href="/users/{{post.user.id}}" class="btn btn-outline-secondary" role="button">Back</a>
-        <a href="/posts/{{post.id}}/edit" class="btn btn-primary" role="button">Edit</a>
-        <button class="btn btn-danger">Delete</button>
+        <a href="/users/{{post.user.id}}" class="btn btn-outline-secondary btn-sm" role="button">User Profile</a>
+        <a href="/posts/{{post.id}}/edit" class="btn btn-primary btn-sm" role="button">Edit</a>
+        <button class="btn btn-danger btn-sm">Delete</button>
     </form>
 </div>
 {% endblock %}
